Colaboratory を使用して作成しました

--- a/normal_distribution_ML.ipynb
+++ b/normal_distribution_ML.ipynb
@@ -6,7 +6,7 @@
       "name": "normal_distribution_ML.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNCT3axivbMt8uyYJfRSfUO",
+      "authorship_tag": "ABX9TyPK8uWo9rxt9yM25SW3TH9U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 単変量正規分布の最尤推定によるirisデータセットの分類\n",
+        "# 混合正規分布の最尤推定によるirisデータセットの分類\n",
         "* 訓練データを使って、正規分布のパラメータを最尤推定。\n",
         " * 各特徴量は独立に単変量正規分布に従うと仮定。\n",
         "* テストデータについて、コンポーネントごとの対数尤度を計算。\n",
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "G8ZieHK0sDct"
       },
@@ -60,7 +60,6 @@
       "source": [
         "from sklearn.datasets import load_iris\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.preprocessing import StandardScaler\n",
         "\n",
         "iris = load_iris()\n",
         "X = iris['data']\n",
@@ -74,7 +73,7 @@
       "metadata": {
         "id": "r7KJa7DtsRrb"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -89,7 +88,7 @@
         },
         "outputId": "a140286e-8b30-47de-d002-722d54218fcd"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +122,7 @@
         },
         "outputId": "db63bdf2-bf2b-44de-b55f-389c901bc871"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +148,7 @@
         },
         "outputId": "665491c8-835f-4005-ed8b-8954e8101a70"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -181,7 +180,7 @@
         },
         "outputId": "4be98df8-3698-4dcf-ab00-c5c3aa544367"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -209,7 +208,7 @@
         },
         "outputId": "93909925-541e-445c-a7b6-ff988be4b8ee"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -248,7 +247,7 @@
         },
         "outputId": "87d55bd3-7050-4852-ad40-9b741c909e58"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -335,7 +334,7 @@
         },
         "outputId": "2febaa95-2f3c-4744-fcde-5e8a0d84d472"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -384,7 +383,7 @@
       "metadata": {
         "id": "PhjKVQIkzcYZ"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     }
   ]
