Colaboratory を使用して作成しました

--- a/gradient_based_training_of_PLSI.ipynb
+++ b/gradient_based_training_of_PLSI.ipynb
@@ -6,7 +6,7 @@
       "name": "gradient_based_training_of_PLSI.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM0nqmmeX/Ryx/FR86Ypr0e",
+      "authorship_tag": "ABX9TyO8Vn5/VeigA9VXohGEBgp5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -518,7 +518,8 @@
         "# 課題\n",
         "* このバッチ最適化によるパラメータ推定を、ミニバッチ最適化に書き換えてみよう。\n",
         " * 同じ方法でlossを計算して比較することで、よりlossを小さくできるか、確認してみる。\n",
-        "* もしくは、授業で説明したEMアルゴリズムによる推定を実装し、今回のバッチ最適化と性能比較してみよう。"
+        "* もしくは、授業で説明したEMアルゴリズムによる推定を実装し、今回のバッチ最適化と性能比較してみよう。\n",
+        "* もちろん、使用するフレームワークはPyTorchでなくてもいいです。"
       ],
       "metadata": {
         "id": "YLZxWSQrUORp"
